create HomePage, fix fonts, add api requests

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,5 @@
       "@components/*": ["src/components/*"]
     }
   },
-  "include": ["src", "svgr.d.ts"]
+  "include": ["src", "src/svgr.d.ts"]
 }
